[package]
name = "verge"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "maybe_uninit_slice",
    "maybe_uninit_uninit_array",
    "maybe_uninit_uninit_array_transpose"
]
maybe_uninit_slice = []
maybe_uninit_uninit_array = []
maybe_uninit_uninit_array_transpose = []

[lints.clippy]
pedantic = "deny"
inline_always = "allow"  # used in core and std
